test/invalid/idl/inherit-readonly.webidl
interface Claudine {
  inherit readonly attribute DOMString maya;
};
